syntax = "proto3";

option java_package = "com.mr3y.ludi.datastore.model";
option java_multiple_files = true;

message UserFavouriteGame {
  int64 id = 1;
  string name = 2;
  string thumbnailUrl = 3;
  float rating = 4;
}